# pelagos-mac

./: .gitignore  CLAUDE.md  Cargo.toml  ONGOING_TASKS.md  README.md
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
docs/: ALPINE_VS_UBUNTU_KERNEL.md  DESIGN.md  DEVCONTAINER_GUIDE.md  DEVCONTAINER_REQUIREMENTS.md  GUEST_CONTAINER_EXEC.md  NETWORK_OPTIONS.md  VM_DEBUGGING.md  VM_IMAGE_DESIGN.md  VM_LIFECYCLE.md  VSCODE_ATTACH_SPEC.md
pelagos-docker/: Cargo.toml
pelagos-docker/src/: config.rs  docker_types.rs  invoke.rs  labels.rs  main.rs
pelagos-guest/: Cargo.toml
pelagos-guest/src/: main.rs
pelagos-mac/: Cargo.toml
pelagos-mac/src/: daemon.rs  main.rs  state.rs
pelagos-vz/: Cargo.toml
pelagos-vz/src/: lib.rs  nat_relay.rs  socket_vmnet.rs  vm.rs
scripts/: BOOTSTRAPPING.md  build-build-image.sh  build-vm-image.sh  build-vm-start.sh  pelagos-docker-trace.sh  test-concurrent-exec.sh  test-devcontainer-e2e.sh  test-devcontainer-shim.sh  test-e2e.sh  test-extra-disk.sh  test-interactive.sh  test-label-check.sh  test-mrpc-exec.js  test-mrpc-handshake.js  test-nat-stress.sh  test-perf.sh  test-shellserver-proto.js  test-stress.sh  test-vm-profiles.sh  test-vscode-exec.sh  vm-console.sh  vm-ping.sh  vm-preload.sh  vm-restart.sh  vm-ssh.sh  zig-cc-aarch64-linux-musl.sh
test/fixtures/dc-dockerfile/.devcontainer/: Dockerfile  devcontainer.json
test/fixtures/dc-features/.devcontainer/: devcontainer.json
test/fixtures/dc-postcreate/.devcontainer/: devcontainer.json
test/fixtures/dc-prebuilt/.devcontainer/: devcontainer.json
