[workspace]
members = [
    "pelagos-vz",
    "pelagos-guest",
    "pelagos-mac",
    "pelagos-docker",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["skeptomai"]
license = "Apache-2.0"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
log = "*"
env_logger = "*"
libc = "0.2"
