[package]
name = "pelagos-vz"
version.workspace = true
edition.workspace = true
description = "Apple Virtualization Framework bindings for pelagos-mac"

# macOS only — will not compile on Linux
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["alloc"] }
objc2-virtualization = { version = "0.3", features = [
    "alloc",
    "VZGenericPlatformConfiguration",
    "VZPlatformConfiguration",
    "VZFileHandleNetworkDeviceAttachment",
    "VZNetworkDeviceAttachment",
    "VZMACAddress",
] }
block2 = "0.6"
dispatch2 = "0.3"

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
log.workspace = true
libc.workspace = true
